--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <p>USMC Infantry Machine Gunner 2019-2023</p>
 <p>
   <img id="SpongbobMeme</p>
-    src="SpongebobMeme.webp"
+    src="C:\Users\Wesston Dana\OneDrive\Desktop\SpongebobMeme.webp"
 </p>
 
 </body>
