--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1>CPL Dana</h1>
 <p>USMC Infantry Machine Gunner 2019-2023</p>
 <p>
-  <img id="SpongbobMeme" src="C:\Users\Wesston Dana\OneDrive\Desktop\SpongebobMeme.webp"
+  <img id="SpongbobMeme" src="SpongebobMeme.webp"
 </p>
 
 </body>
