--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html> Wesston Dana <!-- this is an HTML comment -->
 <head>
 <title>Wesston Dana</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
